<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VirtualWallet</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings">Settings</string>
    <string name="new_wallet">New wallet</string>
    <string name="load_wallet">Load wallet</string>
    <string name="authors">Michalina Pacholska,\nJakub Sygnowski\nMarch-May 2013</string>
    <string name="exit">Exit</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_credits">CreditsActivity</string>
    <string name="ok">OK</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_create_wallet">Create a new wallet</string>
    <string name="title_activity_load_wallet">Load a wallet</string>
    <string name="wallet_name">Wallet name</string>
    <string name="new_person">Add person</string>
    <string name="title_activity_create_person">Create a new person</string>
    <string name="title_activity_wallet_screen">Virtual Wallet</string>
    <string name="mail">mail (optional)</string>
    <string name="person_name">Name Surname</string>
    <string name="read_contacts">Read from contacts</string>
    <string name="credits">Credits</string>
    <string name="wallet_state">Wallet state:</string>
    <string name="new_trans">New transaction</string>
    <string name="add_person">Add person</string>
    <string name="rem_person">Remove person</string>
    <string name="log">Payment history</string>
    <string name="title_activity_create_transaction">Create a transaction</string>
    <string name="who_pays">Payants:</string>
    <string name="add_payant">Add payant</string>
    <string name="all_people">Everybody</string>
    <string name="to_wallet">To wallet</string>
    <string name="some">Some people</string>
    <string name="for_whom">For whom:</string>
    <string name="title_activity_choose_payant">ChoosePayant</string>
    <string name="choose_p">Choose payant</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="description">Short description</string>
    <string name="person">Person</string>
    <string name="from_wallet">From wallet</string>
    <string name="no_amount">Enter amount</string>
    <string name="too_much">Wallet doesn\'t contain so much money</string>
    <string name="negative_value">You can\'t pay a non-positive amount of money</string>
    <string name="person_exists">Person with this name already exists in that wallet</string>
    <string name="no_wallet_name">Please enter name for that wallet</string>
    <string name="empty_person_name">Enter person name</string>
    <string name="person_wallet_name">You cannot create person with this name. Sorry</string>
    <string name="no_such_person">There\'s no such person in this wallet</string>
    <string name="enter_desc">Enter description of the transaction</string>
    <string name="no_payants">Choose some payants</string>
    <string name="sure">Are you sure? This cannot be undone</string>
    <string name="remove_wallet">Remove wallet</string>
    <string name="title_activity_remove_person">Settle acounts with some people</string>
    <string name="who">Who:</string>
    <string name="check_all">Check all</string>
    <string name="uncheck_all">Uncheck all</string>
    <string name="no_checked">Choose at least one person</string>
    <string name="joking">You\'re joking, right?</string>
    <string name="title_activity_choose_subset">Choose some subset of people</string>
    <string name="at_least_one">Choose at least one person</string>
    <string name="base_currency">Base currency:</string>
    <string name="other_currencies">Other currencies</string>
    <string name="default_currency">Default currency</string>
    <string name="default_currencyy">Default currency:</string>
    <string name="choose_default_currency">Choose default currency</string>
    <string name="debug">blablabla</string>
    <string name="choose_payant">Choose a payant</string>
    <string name="groups">Groups</string>
    <string name="title_activity_group_view">Groups of people</string>
    <string name="new_group">Add a new group</string>
    <string name="people_from_group">Add people from group</string>
    <string name="title_activity_create_group">Create a group</string>
    <string name="finish">Finish</string>
    <string name="group_name">Group name</string>
    <string name="person_exists_in_group">Person with this name already exists in that group</string>
    <string name="no_group_name">Please enter name for that group</string>
    <string name="title_activity_choose_group">Choose a group</string>
    <string name="wallet_dup_name">There already exists a wallet with that name</string>
    <string name="group_dup_name">There already exists a group with that name</string>
    <string name="add">Add:</string>
    <string name="new_group_small">new group</string>
    <string name="new_person_small">new person</string>
    <string name="title_activity_personal_settlement">PersonalSettlementActivity</string>
    <string name="action_settings">Settings</string>
    <string name="choose_person">Choose person</string>

</resources>