<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen" >

    <TableLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" >

       <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_wallet"
            android:onClick="newWallet" />
        </TableRow>

                   <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
        <Button
            android:id="@+id/button2"
            android:text="@string/load_wallet"
            android:onClick="loadWallet" />
        </TableRow>
	`	<TableRow
                android:id="@+id/tableRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
	    <Button
	        android:id="@+id/button6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/groups"
	        android:onClick="openGroups" />
	    </TableRow>
	
                      <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
	    <Button
	        android:id="@+id/button3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/settings"
	        android:onClick="settings" />
	    </TableRow>
	    <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
	    <Button
	        android:id="@+id/button4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/credits"
	        android:onClick="authors" />
	    </TableRow>
	    <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
	    <Button
	        android:id="@+id/button5"
	        android:text="@string/exit"
	        android:onClick="exit" />
	    </TableRow>
	    <!--  
	     <Button
	        android:id="@+id/button6"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="DEBUG: read"
	        android:onClick="debRead" />
	     
	     <Button
	        android:id="@+id/button7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="DEBUG: write"
	        android:onClick="debWrite" />
	    -->
	        
     </TableLayout>



</RelativeLayout>