<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"  
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateWallet" >
    
	<EditText
	    android:id="@+id/wallet_name"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="text"
	    android:hint="@string/wallet_name"
	    android:layout_alignParentTop="true" >
	    <requestFocus/>
    </EditText>
    <ScrollView 
        android:id="@+id/person_name_scroll"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/wallet_name"
        android:layout_centerHorizontal="true" >
	<RelativeLayout
	    android:id="@+id/person_name_layout"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >

	    <Button
       		android:id="@+id/add_person"
       		android:layout_width="wrap_content"
       		android:layout_height="wrap_content"
       		android:layout_centerHorizontal="true"
       		android:text="@string/new_person"
       		android:onClick="getPerson" />
   <Button
       android:id="@+id/button1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/add_person"
       android:layout_centerHorizontal="true"
       android:text="@string/ok"
       android:onClick="forward" />
	    
	</RelativeLayout>
    </ScrollView>

</RelativeLayout>
